--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "jest": "^24.8.0",
     "jest-html-reporter": "^2.5.0",
     "jest-preset-angular": "^7.1.1",
-    "protractor": "~5.4.2",
     "ts-node": "~8.2.0",
     "tslint": "~5.17.0",
     "typescript": "~3.4.5"
@@ -45,6 +44,8 @@
   "jest": {
     "preset": "jest-preset-angular",
     "testResultsProcessor": "./node_modules/jest-html-reporter",
-    "setupTestFrameworkScriptFile": "./jest/setupJest.ts"
+    "setupFilesAfterEnv": [
+      "./jest/setupJest.ts"
+    ]
   }
 }
