--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -4,7 +4,7 @@
     "outDir": "../out-tsc/spec",
     "baseUrl": "./",
     "module": "commonjs",
-    "types": ["jasmine", "node"],
+    "types": ["jest", "node"],
     "allowJs": true
   },
   "files": ["test.ts"],
